--- a/projekter.html
+++ b/projekter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,70 +11,73 @@
     <script src="script.js"></script> <!-- Link til din JavaScript-fil -->
 
 </head>
+
 <body>
 
     <!-- BURGERMENU -->
     <nav>
         <!-- Menu knap -->
-            <div class="menu-knap" onclick="toggleMenu()">
-                <div class="linje"></div>
-                <div class="linje"></div>
-                <div class="linje"></div>
-            </div>
-        
+        <div class="menu-knap" onclick="toggleMenu()">
+            <div class="linje"></div>
+            <div class="linje"></div>
+            <div class="linje"></div>
+        </div>
+
         <!-- Menucontainer til menupunkter -->
         <div id="menu" class="menu skjult">
             <ul>
-        <!--Linker til undermenupunkterne-->
+                <!--Linker til undermenupunkterne-->
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="omMig.html">Lær mig at kende</a></li>
                 <li><a href="projekter.html">Projekter</a></li>
                 <li><a href="kontaktMig.html">Kontakt mig</a></li>
             </ul>
         </div>
-        </nav>
+    </nav>
 
 
-<section class="projekter">
-<!-- Sektion til overskrift og projektkort -->
-<section class="v-side">
-        <p>PROJEKTER</p>
-        <h1>Indblik i min <br> kreative <br> process</h1>
-        <p>
-            Hvert projekt og hver kunde er forskellige, så det samme er min tilgang. Mit mål forbliver dog altid det samme - opnå kundetilfredshed, levere brugervenlige løsninger, designe æstetisk tiltalende produkter og samtidig nyde og fordybe mig i processen.
-        </p>
-        <p>Klik på et projekt og se, hvordan min arbejdstilgang <em>kan</em> se ud.</p>
-</section>
+    <section class="projekter">
+        <!-- Sektion til overskrift og projektkort -->
+        <section class="v-side">
+            <p>PROJEKTER</p>
+            <h1>Indblik i min <br> kreative <br> process</h1>
+            <p>
+                Hvert projekt og hver kunde er forskellige, så det samme er min tilgang. Mit mål forbliver dog altid det
+                samme - opnå kundetilfredshed, levere brugervenlige løsninger, designe æstetisk tiltalende produkter og
+                samtidig nyde og fordybe mig i processen.
+            </p>
+            <p>Klik på et projekt og se, hvordan min arbejdstilgang <em>kan</em> se ud.</p>
+        </section>
 
-    <!-- Grid med projekter -->
-    <section class="h-side">
+        <!-- Grid med projekter -->
+        <section class="h-side">
 
-        <div class="projekt-item1">
-            <a href="nippon.html"> <!--Tilføjer link til Nippon siden-->
-            <img id="nipponImg" src="images/nipponMock.webp" alt="Nippon måltidskasser">
-            </a>
+            <div class="projekt-item1">
+                <a href="nippon.html"> <!--Tilføjer link til Nippon siden-->
+                    <img id="nipponImg" src="images/nipponMock.webp" alt="Nippon måltidskasser">
+                </a>
 
-            <a href="zeroBuzz.html"> <!--Tilføjer link til ZeroBuzz Brew siden-->
-            <img id="zeroImg" src="images/zeroMockup.webp" alt="ZeroBuzz Brew">
-            </a>
+                <a href="zeroBuzz.html"> <!--Tilføjer link til ZeroBuzz Brew siden-->
+                    <img id="zeroImg" src="images/zeroMockup.webp" alt="ZeroBuzz Brew">
+                </a>
 
-        </div>
+            </div>
 
 
-        <div class="projekt-item2">
-            <a href="nippon.html"> <!--Tilføjer link til fotografier siden-->
-            <img id="fotoImg" src="images/portraetTekst.webp" alt="Fotografier">
-        </a>
+            <div class="projekt-item2">
+                <a href="nippon.html"> <!--Tilføjer link til fotografier siden-->
+                    <img id="fotoImg" src="images/portraetTekst.webp" alt="Fotografier">
+                </a>
 
-        <a href="sCircle.html"> <!--Tilføjer link til Sandika Circle siden-->
-            <img id="scImg" src="images/scMock.webp" alt="Sandika Circle">
-        </a>
+                <a href="sCircle.html"> <!--Tilføjer link til Sandika Circle siden-->
+                    <img id="scImg" src="images/scMock.webp" alt="Sandika Circle">
+                </a>
 
-        </div>
-</section>
-</section>
+            </div>
+        </section>
+    </section>
 
 
 </body>
-</html>
 
+</html>
