--- a/projekter.html
+++ b/projekter.html
@@ -52,7 +52,7 @@
         <!-- Grid med projekter -->
         <section class="h-side">
 
-            <div class="projekt-item1">
+            <!-- <div class="projekt-item1"> -->
                 <a href="nippon.html"> <!--Tilføjer link til Nippon siden-->
                     <img id="nipponImg" src="images/nipponMock.webp" alt="Nippon måltidskasser">
                 </a>
@@ -61,10 +61,10 @@
                     <img id="zeroImg" src="images/zeroMockup.webp" alt="ZeroBuzz Brew">
                 </a>
 
-            </div>
+            <!-- </div>
 
 
-            <div class="projekt-item2">
+            <div class="projekt-item2"> -->
                 <a href="nippon.html"> <!--Tilføjer link til fotografier siden-->
                     <img id="fotoImg" src="images/portraetTekst.webp" alt="Fotografier">
                 </a>
@@ -73,7 +73,7 @@
                     <img id="scImg" src="images/scMock.webp" alt="Sandika Circle">
                 </a>
 
-            </div>
+            <!-- </div> -->
         </section>
     </section>
 
