--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -107,7 +107,30 @@ Fik til opgave, at udarbejde en digital løsning for det fiktive mikrobryggeri Z
 </section>
 
 </section>
+<!-- FOOTER-->
 
+<footer>
+
+    <aside class="footer-generelt">
+
+        <!-- Laver en kolonne med sitets indhold  -->
+        <figure class="kolonne">
+            <!--Linker til undersiderne-->
+            <p><a href="index.html">Forside</a></p>
+            <p><a href="omMig.html">Hvem er jeg?</a></p>
+            <p><a href="projekter.html">Projekter</a></p>
+            <p><a href="kontaktMig.html">Kontakt mig</a></p>
+        </figure>
+
+        <!-- 'Logo'/CK section -->
+        <figure class="footer-logo"><!-- Logo - som linker til forsiden -->
+            <a href="index.html"></a>
+            <p>CK</p>
+        </figure>
+
+    </aside>
+
+</footer>
 
 
 </body>
