--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -42,7 +42,7 @@
      <h1>ZeroBuzz Brew</h1>
      <img id="zeroPC" src="images/zeroPC.webp" alt="Macbook mockup med hjemmeside for ZeroBuzz Brew">
      <img id="zeroTlf" src="images/zeroTLF.webp" alt="iPhone mockup med hjemmeside for ZeroBuzz Brew">
-     <p>Min løsning bestod af en responsiv hjemmeside, som er optimeret til telefon såvel som desktop. </p>  
+     <p id="billedeTekst1">Min løsning bestod af en responsiv hjemmeside, som er optimeret til telefon såvel som desktop. </p>  
     </section>
     
     <section class="h-side1">
@@ -60,7 +60,6 @@ Fik til opgave, at udarbejde en digital løsning for det fiktive mikrobryggeri Z
     <img src="images/ai.webp" alt="logo af Adobe Illustrator">
     <img src="images/html.webp" alt="logo af HTML">
     <img src="images/css.webp" alt="logo af CSS">
-    <img src="images/js.webp" alt="logo af JavaScript">
 </div>
     
 </section>
@@ -92,12 +91,10 @@ Fik til opgave, at udarbejde en digital løsning for det fiktive mikrobryggeri Z
 <section class="vIdentitet">
 <section class="v-side3">
  <p id="billedeTekst">Reklamer til de forskellige smagsvarianter, min løsning tilbyder- den friske, den, klassiske og den sunde.</p>
-<div id="varianter">
-<img id="zeroPlakat" src="images/zeroPlakat.webp" alt="Plakat med ZeroBuzz Brew, som hænger ude på gaden. En mand går forbi">
+ <div id="varianter">
+ <img id="zeroPlakat" src="images/zeroPlakat.webp" alt="Plakat med ZeroBuzz Brew, som hænger ude på gaden. En mand går forbi">
 <img id="denFriske" src="images/denFriske.webp" alt="Ølvariant fra ZeroBuzz Brew - den friske">
-<img id="denSunde" src="images/denSunde.webp" alt="Ølvariant fra ZeroBuzz Brew - den sunde ">
 </div>
-
 </section>
 
 <section class="h-side3">
