--- a/taske.html
+++ b/taske.html
@@ -41,8 +41,8 @@
 
         <div class="taske">
             <a href="omMig.html">
-            <img src="images/taske.webp">
-        </a>
+                <img src="images/taske.webp">
+            </a>
             <p id="taskeLuk">*Klik for at lukke*</p>
 
             <article id="kreativitet">
@@ -55,35 +55,43 @@
             <article id="rejser">
                 <img src="images/rejser.webp">
                 <h6>Rejser</h6>
-                <p>Jeg elsker at rejse, da det beriger mig på så mange måder.  Får udvidet mit verdenssyn, det øger min kulturforståelse og giver mig nye kulinariske oplevelser.</p>
+                <p>Jeg elsker at rejse, da det beriger mig på så mange måder. Får udvidet mit verdenssyn, det øger min
+                    kulturforståelse og giver mig nye kulinariske oplevelser.</p>
             </article>
 
 
             <article id="musik">
                 <img src="images/musik.webp">
                 <h6>Musik</h6>
-                <p>At lytte til god musik eller en fangende podcast kan virkelig sætte en stemning for mig -  kan både give mig ro og afslappning eller et boost af energi og overskud. </p>
+                <p>At lytte til god musik eller en fangende podcast kan virkelig sætte en stemning for mig - kan både
+                    give mig ro og afslappning eller et boost af energi og overskud. </p>
             </article>
 
 
             <article id="traening">
                 <img src="images/traening.webp">
                 <h6>Træning</h6>
-                <p>Træning er mit frirum og kan veksle mellem alt fra løbe- og vægttræning til psykisk træning i form af  at skrive journal.  Det giver mig energi, klarhed og en følelse af velvære, både fysisk og mentalt. </p>
+                <p>Træning er mit frirum og kan veksle mellem alt fra løbe- og vægttræning til psykisk træning i form af
+                    at skrive journal. Det giver mig energi, klarhed og en følelse af velvære, både fysisk og mentalt.
+                </p>
             </article>
 
 
             <article id="familieliv">
                 <img src="images/familie.webp">
                 <h6>Familieliv</h6>
-                <p>Mine relationer er en af mine største prioriteter. Jeg spejler mig i de mennesker, jeg omgiver mig med, og finder stor værdi i at dele oplevelser, tanker og følelser. De giver mig både inspiration, styrke og perspektiv, og de er en uundværlig del af, hvem jeg er. </p>
+                <p>Mine relationer er en af mine største prioriteter. Jeg spejler mig i de mennesker, jeg omgiver mig
+                    med, og finder stor værdi i at dele oplevelser, tanker og følelser. De giver mig både inspiration,
+                    styrke og perspektiv, og de er en uundværlig del af, hvem jeg er. </p>
             </article>
 
 
             <article id="struktur">
                 <img src="images/struktur.webp">
                 <h6>Struktur</h6>
-                <p>Jeg trives med at være struktureret, både i mit arbejde og i mit personlige liv. Jeg nyder at tilpasse og tilrettelægge mine planer og gøremål, men der er altid plads til spontane indslag og fleksible aftaler.</p>
+                <p>Jeg trives med at være struktureret, både i mit arbejde og i mit personlige liv. Jeg nyder at
+                    tilpasse og tilrettelægge mine planer og gøremål, men der er altid plads til spontane indslag og
+                    fleksible aftaler.</p>
             </article>
 
 
