--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <figure class="footer-logo"><!-- Logo - som linker til forsiden -->
                 <a href="index.html"></a>
                 <p>CK</p>
+                <p>hej okay eller hvad</p>
             </figure>
 
         </aside>
