--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
             <figure class="footer-logo"><!-- Logo - som linker til forsiden -->
                 <a href="index.html"></a>
                 <p>CK</p>
-                <p>hej okay eller hvad</p>
+                <p>jndnduende</p>
+                <h1>eoeokdeoe</h1>
             </figure>
 
         </aside>
