--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div id="menu" class="menu skjult">
             <ul>
                 <!--Linker til undermenupunkterne-->
-                <li><a href="index.html">Forside</a></li>
-                <li><a href="omMig.html">Lær mig at kende</a></li>
-                <li><a href="projekter.html">Projekter</a></li>
-                <li><a href="kontaktMig.html">Kontakt mig</a></li>
+                <li><a href="index.html">FORSIDE</a></li>
+                <li><a href="omMig.html">LÆR MIG AT KENDE</a></li>
+                <li><a href="projekter.html">PROJEKTER</a></li>
+                <li><a href="kontaktMig.html">KONTAKT MIG</a></li>
             </ul>
         </div>
     </nav>
@@ -140,21 +140,15 @@
 
         <aside class="footer-generelt">
 
-            <!-- Laver en kolonne med sitets indhold  -->
+            Laver en kolonne med sitets indhold 
             <figure class="kolonne">
                 <!--Linker til undersiderne-->
-                <p><a href="index.html">Forside</a></p>
+                <h2>+45 60 22 56 60 </h2>
+                <h1>Claire87@hotmail.dk</h1>
+                <!-- <p><a href="index.html">Forside</a></p>
                 <p><a href="omMig.html">Hvem er jeg?</a></p>
                 <p><a href="projekter.html">Projekter</a></p>
-                <p><a href="kontaktMig.html">Kontakt mig</a></p>
-            </figure>
-
-            <!-- 'Logo'/CK section -->
-            <figure class="footer-logo"><!-- Logo - som linker til forsiden -->
-                <a href="index.html"></a>
-                <p>CK</p>
-                <p>jndnduende</p>
-                <h1>eoeokdeoe</h1>
+                <p><a href="kontaktMig.html">Kontakt mig</a></p> -->
             </figure>
 
         </aside>
