--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
 
         <aside class="footer-generelt">
 
-            Laver en kolonne med sitets indhold 
+        
             <figure class="kolonne">
                 <!--Linker til undersiderne-->
-                <h2>+45 60 22 56 60 </h2>
-                <h1>Claire87@hotmail.dk</h1>
-                <!-- <p><a href="index.html">Forside</a></p>
+                <!-- <h2>+45 60 22 56 60 </h2>
+                <h1>Claire87@hotmail.dk</h1> -->
+                <p><a href="index.html">Forside</a></p>
                 <p><a href="omMig.html">Hvem er jeg?</a></p>
                 <p><a href="projekter.html">Projekter</a></p>
-                <p><a href="kontaktMig.html">Kontakt mig</a></p> -->
+                <p><a href="kontaktMig.html">Kontakt mig</a></p>
             </figure>
 
         </aside>
