--- a/taske.html
+++ b/taske.html
@@ -14,26 +14,27 @@
 
 <body>
 
-    <!-- Burgermenu -->
-    <nav>
-        <!-- Menu knap -->
-        <div class="menu-knap" onclick="toggleMenu()">
-            <div class="linje"></div>
-            <div class="linje"></div>
-            <div class="linje"></div>
-        </div>
-
-        <!-- Menucontainer til menupunkter -->
-        <div id="menu" class="menu skjult">
-            <ul>
-                <!--Linker til undermenupunkterne-->
-                <li><a href="index.html">Forside</a></li>
-                <li><a href="omMig.html">Lær mig at kende</a></li>
-                <li><a href="projekter.html">Projekter</a></li>
-                <li><a href="kontaktMig.html">Kontakt mig</a></li>
-            </ul>
-        </div>
-    </nav>
+        <!-- Burgermenu -->
+        <nav>
+            <!-- Menu knap -->
+            <div class="menu-knap" onclick="toggleMenu()">
+                <div class="linje"></div>
+                <div class="linje"></div>
+                <div class="linje"></div>
+            </div>
+    
+            <!-- Menucontainer til menupunkter -->
+            <div id="menu" class="menu skjult">
+                <ul>
+                    <!--Linker til undermenupunkterne-->
+                    <li class="menu-item"><span>NO. 1</span> <a href="index.html">Forside</a></li>
+                    <li class="menu-item"><span>NO. 2</span> <a href="omMig.html">Lær mig at kende</a></li>
+                    <li class="menu-item"><span>NO. 3</span> <a href="projekter.html">Projekter</a></li>
+                    <li class="menu-item"><span>NO. 4</span> <a href="kontaktMig.html">Kontakt mig</a></li>
+                </ul>
+            </div>
+        </nav>
+    
 
 
 
