--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <!-- Burgermenu -->
     <nav>
         <!-- Menu knap -->
@@ -27,10 +26,10 @@
         <div id="menu" class="menu skjult">
             <ul>
                 <!--Linker til undermenupunkterne-->
-                <li><a href="index.html">Forside</a></li>
-                <li><a href="omMig.html">Lær mig at kende</a></li>
-                <li><a href="projekter.html">Projekter</a></li>
-                <li><a href="kontaktMig.html">Kontakt mig</a></li>
+                <li class="menu-item"><span>NO. 1</span> <a href="index.html">Forside</a></li>
+                <li class="menu-item"><span>NO. 2</span> <a href="omMig.html">Lær mig at kende</a></li>
+                <li class="menu-item"><span>NO. 3</span> <a href="projekter.html">Projekter</a></li>
+                <li class="menu-item"><span>NO. 4</span> <a href="kontaktMig.html">Kontakt mig</a></li>
             </ul>
         </div>
     </nav>
@@ -123,28 +122,22 @@
     </section>
     <!-- FOOTER-->
 
+    
+
+    <!-- FOOTER-->
+
     <footer>
 
-        <aside class="footer-generelt">
-
-            <!-- Laver en kolonne med sitets indhold  -->
-            <figure class="kolonne">
-                <!--Linker til undersiderne-->
-                <p><a href="index.html">Forside</a></p>
-                <p><a href="omMig.html">Hvem er jeg?</a></p>
-                <p><a href="projekter.html">Projekter</a></p>
-                <p><a href="kontaktMig.html">Kontakt mig</a></p>
-            </figure>
-
-            <!-- 'Logo'/CK section -->
-            <figure class="footer-logo"><!-- Logo - som linker til forsiden -->
-                <a href="index.html"></a>
-                <p>CK</p>
-            </figure>
-
+        <aside class="Fkolonne">
+            <p id="tlfnr">
+                <a href="tel:+4560225660">+45 60 22 56 60</a>
+            </p>
+            <p id="email">
+                <a href="mailto:Claire87@hotmail.dk">Claire87@hotmail.dk</a>
+            </p>
         </aside>
 
-    </footer>
+</footer>
 
 
 </body>
