--- a/projekter.html
+++ b/projekter.html
@@ -58,7 +58,7 @@
                 </a>
 
                 <a href="zeroBuzz.html" class="projekt-link-hoejre"> <!--Tilføjer link til ZeroBuzz Brew siden-->
-                    <img id="zeroImg" src="images/zeroMockup.webp" alt="ZeroBuzz Brew">
+                    <img id="zeroImg" src="images/zeroMockup.webp" alt="ZeroBuzz Brew"style=" width: 101%;">
                 </a>
 
                 <a href="nippon.html" class="projekt-link-venstre"> <!--Tilføjer link til fotografier siden-->
@@ -66,7 +66,7 @@
                 </a>
 
                 <a href="sCircle.html" class="projekt-link-hoejre"> <!--Tilføjer link til Sandika Circle siden-->
-                    <img id="scImg" src="images/scMock.webp" alt="Sandika Circle">
+                    <img id="scImg" src="images/scMock.webp" alt="Sandika Circle" style="width: 102%;">
                 </a>
             </section>
         </div>
