--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portolio forside</title>
-    <link rel="stylesheet" href="https://use.typekit.net/dql1dpg.css"> <!--Henter fonts-->
-    <link rel="stylesheet" href="https://use.typekit.net/dql1dpg.css"> <!-- -//- -->
-    <link rel="stylesheet" href="forside.css"> <!--Link til css-->
-    <script src="script.js"></script> <!-- Link til din JavaScript-fil -->
+    <link rel="stylesheet" href="https://use.typekit.net/dql1dpg.css"> <!-- Henter fonts-->
+    <link rel="stylesheet" href="forside.css"> <!-- Link til css -->
+    <script src="script.js" defer></script> <!-- Link til JavaScript-fil -->
 
 
 </head>
@@ -71,7 +70,7 @@
     </section>
 
 
-    <!-- ANDET TOUCHPOINT - VELKOMMEN TIL SEKTION -->
+    <!-- ********* VELKOMMEN TIL SEKTION ********  -->
 
 
     <section class="introduktion">
@@ -83,14 +82,14 @@
 
         <article class="h-side">
             <h2>Velkommen <br> til!</h2>
-            <p>Hej og velkommen til. Jeg hedder som sagt Claire og dette er mit portfolio. Jeg er UX design entusiask
-                med en passion for at skabe æstetiske og funktionelle løsninger, der er optimeret efter brugerbehov. Jeg
+            <p>Jeg hedder Claire og jeg er en UX design entusiask
+                med passion for at skabe æstetiske og funktionelle løsninger, der er optimeret efter brugerbehov. Jeg
                 er på nuværende tidspunkt på 3. semester af Multimediedesign på Erhvervsakademiet Aarhus, og næste
                 semester skal jeg ud i praktik – og håber, at I bliver min kommende praktikplads!</p>
             <p>Klik rundt og undersøg, hvad jeg har at byde på!</p>
 
             <a href="omMig.html">
-                <button> Hvem er jeg?</button>
+                <button> Lær mig at kende</button>
             </a>
 
 
@@ -101,41 +100,8 @@
 
 
 
-    <!-- TREDJE TOUCHPOINT - MAPPE DEL -->
 
-    <section class="indhold">
-        <section>
-            <a href="omMig.html"> <!-- Linker til 'om mig' undersiden -->
-                <img src="images/mappebeskaaret.webp" alt="Billede af en blå mappe, animeret">
-            </a>
-            <h2>HVEM ER JEG?</h2>
-            <p>Lad mig introducere mig selv og give dig et indblik i, hvad der driver mig, både fagligt og personligt.
-                Sammen kan vi finde ud af, om jeg er det rette match til dit team.</p>
-        </section>
-
-        <section>
-            <a href="projekter.html"> <!-- Linker til 'projekter' undersiden -->
-                <img src="images/mappebeskaaret.webp" alt="Billede af en blå mappe, animeret">
-            </a>
-            <h2>PROJEKTER</h2>
-            <p>Her finder du et udvalg af mine projekter - skabt både individuelt og i samarbejde med andre – gennem min
-                uddannelse og i min fritid. </p>
-        </section>
-
-        <section>
-            <a href="kontaktMig.html"> <!-- Linker til 'kontakt mig' undersiden -->
-                <img src="images/mappebeskaaret.webp" alt="Billede af en blå mappe, animeret">
-            </a>
-            <h2>KONTAKT MIG</h2>
-            <p>Interesseret i et samarbejde eller sidder du inde med et spørgsmål? Tøv endelig ikke med at kontakte mig.
-            </p>
-        </section>
-
-    </section>
-
-
-
-    <!-- FOOTER-->
+    <!-- ***********  FOOTER ************ -->
 
     <footer>
 
