Kontakt mig renovering + responsiv

--- a/kontaktMig.html
+++ b/kontaktMig.html
@@ -54,7 +54,21 @@
                 <img src="images/pilElevator.webp" alt="Sort pil">
                 *bloopers*
             </p>
+
+            <!-- Scroll pil -->
+            <div class="scroll-pil" onclick="scrollTilSektion()">
+                <!-- Javascript funktion, starter når man klikker på pilen-->
+                <!-- SVG-kode, som tegner en pil - Definerer selve pilens form som to streger-->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M7 13l5 5 5-5M7 6l5 5 5-5" />
+                </svg>
+            </div>
         </article>
+
+
+
+
 
         <div class="elevator-side">
             <video class="elevator-dor" autoplay loop muted playsinline>
