--- a/kontaktMig.html
+++ b/kontaktMig.html
@@ -41,11 +41,12 @@
     <section class="kontaktMig">
         <article class="kontakt-tekst">
             <p>Interesseret i et samarbejde?</p>
-            <h1>Kontakt <br> mig!</h1>
-
-            <p>Email: Claire87@hotmail.dk</p>
-            <p>Tlf nr: 60225660</p>
-            <p>Linked in: Claire Kahindi</p>
+            <h1>Kontakt mig!</h1>
+            
+            <p><a href="mailto:Claire87@hotmail.dk">Email: Claire87@hotmail.dk</a></p>
+            <p><a href="tel:+4560225660">Tlf nr: +45 60 22 56 60</a></p>
+            
+            <p><a href="https://www.linkedin.com/in/claire-kahindi-gitaari-9776b92b3/" target="_blank"> Linked in: Claire Kahindi Gitaari</a></p>
 
             <p id="cta">Ser frem til at høre fra dig!</p>
 
