sandika circle forbedring

--- a/sCircle.html
+++ b/sCircle.html
@@ -14,8 +14,8 @@
 
 <body>
 
-       <!-- Burgermenu -->
-       <nav>
+      <!-- Burgermenu -->
+      <nav>
         <!-- Menu knap -->
         <div class="menu-knap" onclick="toggleMenu()">
             <div class="linje"></div>
@@ -35,17 +35,12 @@
         </div>
     </nav>
 
-
-
     <!--  INTRODUKTION DELEN -->
     <section class="introduktion">
         <section class="v-side1">
             <p id="projektNr">PROJEKT NO. 4</p>
             <h1>Sandika Circle</h1>
-            <p><strong>Case</strong><br>Vi fik til opgave at indgå i et samarbejde med en virksomhed og udarbejde en
-                digital løsning for dem. Min gruppe og jeg indgik et samarbejde med Laura Sandika, som er ejer af
-                Sandika Circle - et yogalates brand i sin opstartsfase. Da studiet var nyt, var det uden visuelt
-                identitet eller digital tilstedeværelse, hvilket blev vores problemstilling og dermed hovedfokus. </p>
+            <p><strong>Case</strong><br>Vi blev tildelt opgaven at udvikle en digital løsning for Sandika Circle, et nystartet yogalates-brand uden visuel identitet eller digital tilstedeværelse. Vores mål var at skabe en sammenhængende løsning, der afspejlede brandets værdier og vision.</p>
 
             <p><br><strong>Værktøjer</strong></p>
             <div class="programmerImg">
@@ -64,7 +59,7 @@
         <section class="h-side1">
             <img id="scMobiler" src="images/scMobiler.webp">
             <img id="scMobil" src="images/scMobil.webp">
-            <p>Løsning var en mobiloptimeret hjemmeside, med fokus på stærke genkendelige visuelle elementer og
+            <p><strong>Løsning:</strong> En mobiloptimeret hjemmeside, med fokus på stærke genkendelige visuelle elementer og
                 animationer.</p>
         </section>
 
@@ -74,57 +69,128 @@
     <section class="proces">
         <section class="v-side2">
             <div id="designProces">
-                <img src="images/scDesign.webp" alt="Billede af designprincipper ved Sandika Circle">
+                <!-- <img src="images/scDesign.webp" alt="Billede af designprincipper ved Sandika Circle"> -->
+                <figure>
+                    <img src="images/scDesign.webp" alt="Billede af designprincipper ved Sandika Circle">
+                    <figcaption id="billedeTekst">*Designprincipper for Sandika Circle*</figcaption>
+                </figure>
                 <img src="images/scLogo.webp" alt="Billede af logoprocessen principper ved Sandika Circle">
             </div>
         </section>
 
         <section class="h-side2">
-            <p id="overskrift"><strong>Proces</strong><br>
-                Forud for designprocessen gennemførte vi desk research, netnografisk analyse og interviews.
-                Dataindsamling dannede grundlag for segmentering, udarbejdelse af Value Proposition Canvas samt
-                prioritering af brugernes behov og frustrationer, som vi brugte til at udvikle personaer og en
-                tilsvarende tone of voice. Disse værktøjer blev benyttet med hensigten om at appelere, resonere og
-                tiltrække målgruppen.
+            <p id="overskrift"><strong>Designprincipper</strong><br>
+                Et af mine primære fokuspunkter i designprocessen var at skabe en brugervenlig og intuitiv løsning. For at opnå dette implementerede jeg udvalgte designprincipper, der sørgede for, at brugerens handlinger – helt underbevidst – fulgte vores ønskede flow. Dette inkluderede blandt andet at anvende et klart visuelt hierarki og strategisk placering af nøgleelementer som logo og call-to-action, så brugerens øjne naturligt blev ledt til de vigtige funktioner gennem et Z-hierarki.</p>
 
-                Med moodboards fik vi en konstruktiv dialog om kundens ønsker samt vores forventninger og kunne nu
-                begynde designprocessen. Under design processen havde vi fokus på at implementere designprincipper, som
-                gestalt lovene, visuel balance og kontrast, hvilket gjorde løsningen intuitiv for brugerne. Her havde vi
-                fokus på visuelt hierarki, så indholdet er placeret hensigtsmæssigt, og de vigtigste elementer, herunder
-                logo og CTA er placeret hvor øjene naturligt rammer ved et Z-hierarki.</p>
-
-            <p><strong>Logodesign</strong><br>
-                En af mine opgaver var at udvikle den visuelle identitet samt logoet. Logoet skulle være skalerbart for
-                at kunne fungere på tværs af platforme. Valget faldt på et kombinationsmærke, der integrerer
-                virksomhedens navn og et emblem bestående af bogstaverne S og C. Tilsammen danner bogstaverne en cirkel for at skabe en rød tråd og assiociation til Sandika Circle når
-                man ser logoet.</p>
+            <p><strong>Logoudvikling</strong><br>
+                Logoet er udarbejdet med fokus på at være fleksibelt og skalerbart, så det kan anvendes på tværs af platforme og i brandingmateriale. De to bogstaver er designet til at danne en cirkel, hvilket ikke kun skaber visuel sammenhæng, men også understøtter navnet Sandika Circle. På den måde vækker logoet automatisk associationer til brandets kerneværdier og skaber en stærk visuel identitet.</p>
 
 
         </section>
     </section>
+
+
+
+
+ <!--  MOTION GRAPHICS -->
+ <section class="introduktion">
+    <section class="v-side1">
+        <p><strong>Branding</strong><br>
+            Brandingmaterialerne blev designet til at kunne tilpasses forskellige medier og platforme, herunder motion graphics. Disse elementer blev nøje udformet for at understøtte brandets værdier og skabe en dynamisk visuel oplevelse. Motion graphics blev brugt til at bringe logoet og andre visuelle elementer til live, hvilket gav en ekstra dimension til brandets online tilstedeværelse og kommunikationen med målgruppen.</p>
+    </section>
+
+    <section class="h-side1">
+        <figure id="video-sektion">
+        <video width="640" height="360" autoplay muted loop style="width: 1000px; height: 450px;">
+            <source src="motiongraphic.mp4" type="video/mp4">
+            Din browser understøtter ikke video.
+          </video>
+          <video width="640" height="360" autoplay muted loop style="width: 1000px; height: 450px;">
+            <source src="reklameSC.mp4" type="video/mp4">
+            Din browser understøtter ikke video.
+          </video>
+          </figure>
+    </section>
+
+</section>
+
+
+
+
+
 
 
     <!-- VISUEL IDENTITET -->
 
     <section class="vIdentitet">
         <section class="v-side2">
-            <div id="visuelIdentitet">
+            <div id="branding-billeder">
+                <aside id="visit-kort-vaegte">
                 <img id="scVisit" src="images/scVisit.webp" alt="Billede af designprincipper ved Sandika Circle">
+                <img id="vaegte" src="images/scVaegte.webp" alt="Håndvægte med Sandika Circle logo på">
+                </aside>
                 <img id="scNet" src="images/scNet.webp" alt="Billede af logoprocessen principper ved Sandika Circle">
+
             </div>
         </section>
 
         <section class="h-side2">
             <p id="visuelIdentitet"><strong>Visuel identitet</strong><br>
-                Vores brandidentitet er udviklet med fokus på at være relevant for virksomheden og autentisk i forhold
-                til Laura Sandika. Derfor har vi primært valgt at fokusere på træningsudstyr og merchandise, hvor vi har
-                udnyttet logoets genkendelighed til at skabe en stærk visuel forbindelse med brandet.</p>
-
-            <img id="vaegte" src="images/scVaegte.webp" alt="Håndvægte med Sandika Circle logo på">
+                Identiteten er udviklet med fokus på at være både relevant for virksomheden og autentisk i forhold til Laura Sandika. Fokusset er derfor sat på træningsudstyr og merchandise, hvor logoets genkendelighed skaber en stærk visuel forbindelse til brandet.</p>
         </section>
     </section>
 
-   
+
+
+<!-- KOMPTENCER -->
+
+<section class="indhold">
+    <section>
+            <h2>Metoder</h2>
+            <p>Dataindsamling & deskresearch</p>
+            <p>Double Diamond & agil process</p>
+            <p>Netnografisk analyse & interviews</p>
+            <p>Informationsarkitektur</p>
+            <p>Prototyping</p>    
+    </section>
+    <hr>
+
+
+    <h2>Kompetencer</h2>
+    <section id="Kompetencer">-
+    <section class="display">
+        <p>UI/UX design</p>
+        <p>Grafisk design</p>
+        <p>Konceptudvikling</p>
+    </section>
+
+    <section class="display">
+        <p>Copywriting</p>
+        <p>Informationsarkitektur</p>
+        <p>Storytelling</p>
+    </section>
+
+    <section class="display">
+        <p>Brand- og visuel identitet</p>
+        <p>Prototyping</p> 
+    </section>
+</section>
+
+<hr>
+    <section>
+            <h2>Programmer</h2>
+        <img src="images/figma.webp" alt="logo af Figma">
+        <img src="images/ps.webp" alt="logo af Photoshop">
+        <img src="images/ai.webp" alt="logo af Adobe Illustrator">
+        <img src="images/afterEffects.jpg" alt="logo af Adobe afterEffects">
+    </section>
+    <hr>
+</section>
+
+
+
+
+
 
 
 
