yderligere ændringer sandikacircle

--- a/sCircle.html
+++ b/sCircle.html
@@ -147,11 +147,36 @@
 <section class="indhold">
     <section>
             <h2>Metoder</h2>
-            <p>Dataindsamling & deskresearch</p>
+            <!-- <p>Deskresearch & dataanalyse</p>
             <p>Double Diamond & agil process</p>
             <p>Netnografisk analyse & interviews</p>
-            <p>Informationsarkitektur</p>
-            <p>Prototyping</p>    
+            <p>Målgruppeanlyse & interviews</p>
+            <p>Prototyping & brugertest</p>     -->
+            <section id="Kompetencer">-
+                <section class="display">
+                    <p>Deskresearch</p>
+                    <p>Dataanalyse</p>
+                    <p>Double diamond</p>
+                </section>
+            
+                <section class="display">
+                    <p>Agil process</p>
+                    <p>Netnografisk analyse</p>
+                    <p>Interviews</p>
+                </section>
+            
+                <section class="display">
+                    <p>Konkurrentanalyse</p>
+                    <p>Målgruppeanalyse</p>
+                    <p>Interviews</p>
+                </section>
+
+                <section class="display">
+                    <p>Prototyping</p>
+                    <p>Brugertest</p>
+                </section>
+            </section>
+
     </section>
     <hr>
 
@@ -172,7 +197,14 @@
 
     <section class="display">
         <p>Brand- og visuel identitet</p>
-        <p>Prototyping</p> 
+        <p>Prototyping</p>
+        <p>Interaktionsdesign</p> 
+    </section>
+
+    <section class="display">
+        <p>Samarbejde</p>
+        <p>Kommunikation</p>
+        <p>Problemløsning</p> 
     </section>
 </section>
 
