--- a/nippon.html
+++ b/nippon.html
@@ -119,6 +119,73 @@
 
    
 
+ <!-- KOMPTENCER -->
+
+ <section class="indhold">
+    <section>
+            <h2>Metoder</h2>
+            <section id="Kompetencer">-
+                <section class="display">
+                    <p>Deskresearch</p>
+                    <p>Dataanalyse</p>
+                    <p>Double diamond</p>
+                </section>
+            
+                <section class="display">
+                    <p>Agil process</p>
+                    <p>Netnografisk analyse</p>
+                    <p>Interviews</p>
+                </section>
+            
+                <section class="display">
+                    <p>Konkurrentanalyse</p>
+                    <p>Målgruppeanalyse</p>
+                    <p>Interviews</p>
+                </section>
+
+                <section class="display">
+                    <p>Prototyping</p>
+                    <p>Brugertest</p>
+                </section>
+            </section>
+
+    </section>
+    <hr>
+
+
+    <h2>Kompetencer</h2>
+    <section id="Kompetencer">-
+    <section class="display">
+        <p>UI/UX design</p>
+        <p>Grafisk design</p>
+        <p>Konceptudvikling</p>
+    </section>
+
+    <section class="display">
+        <p>Copywriting</p>
+        <p>Informationsarkitektur</p>
+        <p>Designmanual</p>
+    </section>
+
+    <section class="display">
+        <p>Brand- og visuel identitet</p>
+        <p>Prototyping</p>
+        <p>Interaktionsdesign</p> 
+    </section>
+
+    <section class="display">
+        <p>Samarbejde</p>
+        <p>Kommunikation</p>
+        <p>Problemløsning</p> 
+    </section>
+</section>
+
+<hr>
+
+</section>
+
+
+
 
 
     <!-- FOOTER-->
