--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -42,7 +42,7 @@
             <h1>ZeroBuzz Brew</h1>
             <img id="zeroPC" src="images/zeroPC.webp" alt="Macbook mockup med hjemmeside for ZeroBuzz Brew">
             <img id="zeroTlf" src="images/zeroTLF.webp" alt="iPhone mockup med hjemmeside for ZeroBuzz Brew">
-            <p id="billedeTekst1">Min løsning bestod af en responsiv hjemmeside, som er optimeret til telefon såvel som
+            <p id="billedeTekst1"> <strong>Løsning:</strong> Responsiv hjemmeside, som er optimeret til telefon såvel som
                 desktop. </p>
         </section>
 
@@ -71,8 +71,6 @@
     <!-- PROCES DELEN -->
     <section class="proces">
         <section class="v-side2">
-            <p>Forinden designprocessen udførte jeg en deskresearch og interviews for at definere målgruppens drivkraft.
-            </p>
             <p><strong>Proces</strong> <br>Efter researchen var det første skridt at skitsere. Skitserne udviklede sig
                 hurtigt gennem den agile proces, hvorefter jeg valgte farver, typografi og visuelle elementer baseret på
                 designprincipper og research. Beslutningerne samler jeg i styletiles for at fastlå retningslinjerne for
@@ -119,8 +117,66 @@
         </section>
 
     </section>
-    <!-- FOOTER-->
+   
 
+
+
+    <!-- KOMPTENCER -->
+
+ <section class="indhold">
+    <section>
+            <h2>Metoder</h2>
+            <section id="Kompetencer">-
+                <section class="display">
+                    <p>Deskresearch</p>
+                    <p>Dataanalyse</p>
+                    <p>Målgruppeanalyse</p>
+                </section>
+            
+                <section class="display">
+                    <p>Interviews</p>
+                    <p>Informationsarkitektur</p>
+                    <p>Prototyping</p>
+                </section>
+
+                <section class="display">
+                    <p>Brugertest</p>
+                    <p></p>
+                </section>
+            </section>
+
+    </section>
+    <hr>
+
+
+    <h2>Kompetencer</h2>
+    <section id="Kompetencer">-
+    <section class="display">
+        <p>UI/UX design</p>
+        <p>Grafisk design</p>
+        <p>Konceptudvikling</p>
+    </section>
+
+    <section class="display">
+        <p>Copywriting</p>
+        <p>Informationsarkitektur</p>
+        <p>Brand- og visuel identitet</p>
+    </section>
+
+    <section class="display">
+        <p>Prototyping</p>
+        <p>Interaktionsdesign</p> 
+        <p>Brugercentreret design</p>
+    </section>
+
+    <section class="display">
+        <p>Problemløsning</p> 
+    </section>
+</section>
+
+<hr>
+
+</section>
     
 
     <!-- FOOTER-->
